--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-  
+<!DOCTYPE html>
+
+
+
+<link rel="stylesheet" type="text/css" href="style.css">  
     <body class="not-loaded">
         <div class="night"></div>
         <div class="flowers">
